# ChangeLog for x11-wm/i3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.58 2014/12/21 18:04:27 zlogene Exp $

  21 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> i3-4.8.ebuild:
  amd64/x86 stable wrt bug #521070

  24 Sep 2014; Markus Meier <maekke@gentoo.org> i3-4.8.ebuild:
  add ~arm, bug #521374

  25 Jun 2014; Kacper Kowalik <xarthisius@gentoo.org> i3-4.8.ebuild,
  i3-9999.ebuild:
  Add proper perl dependencies for additional tools like i3-save-tree and i3
  -dmenu-desktop. Fixes bug #514188 by zolar czakl <tractrix@gmail.com>

  16 Jun 2014; Julian Ospald <hasufell@gentoo.org> i3-9999.ebuild:
  Ensure proper version of yajl, use "next" branch

  15 Jun 2014; Kacper Kowalik <xarthisius@gentoo.org> i3-4.8.ebuild:
  Ensure proper version of yajl

*i3-4.8 (15 Jun 2014)

  15 Jun 2014; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.8.ebuild:
  Version bump

  10 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> i3-4.7.2.ebuild:
  x86 stable wrt bug #499098

  08 May 2014; Julian Ospald <hasufell@gentoo.org> i3-9999.ebuild:
  revert, no patches in live ebuilds

  08 May 2014; Jeroen Roovers <jer@gentoo.org> i3-9999.ebuild:
  Apply -parallel_make/-cflags patches here too.

  08 May 2014; Jeroen Roovers <jer@gentoo.org> i3-4.7.2-r1.ebuild:
  Space.

*i3-4.7.2-r1 (24 Apr 2014)

  24 Apr 2014; Kacper Kowalik <xarthisius@gentoo.org>
  +files/i3-4.7.2-cflags.patch, +files/i3-4.7.2-parallel_make.patch,
  +i3-4.7.2-r1.ebuild:
  Respect CFLAGS during linking phase, make build parallel safe. Fixes #508304
  by Ferenc Erki <erkiferenc@gmail.com> and #508426 by Julian Ospald
  <hasufell@gentoo.org>. Thanks to hasufell for the patches

  19 Apr 2014; Chema Alonso <nimiux@gentoo.org> i3-4.7.2.ebuild:
  Stable for amd64 wrt bug #499098

*i3-9999 (26 Feb 2014)

  26 Feb 2014; Julian Ospald <hasufell@gentoo.org> +i3-9999.ebuild,
  metadata.xml:
  add live ebuild
